# D3DShot

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
d3dshot/: __init__.py  capture_output.py  d3dshot.py  display.py
d3dshot/capture_outputs/: numpy_capture_output.py  numpy_float_capture_output.py  pil_capture_output.py  pytorch_capture_output.py  pytorch_float_capture_output.py  pytorch_float_gpu_capture_output.py  pytorch_gpu_capture_output.py
d3dshot/dll/: d3d.py  dxgi.py  shcore.py  user32.py
